<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@drawable/widget_background"
        android:theme="@style/Theme.Material3.DynamicColors.DayNight"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/widget_container"
            android:layout_gravity="top|start"
            android:padding="12dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/widget_title"
                android:textSize="14sp"
                android:text="@string/title"
                android:textColor="?android:attr/textColorPrimary" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/widget_message"
                android:textSize="29.5sp"
                android:gravity="start|center"
                android:layout_weight="1"
                android:text="@string/message"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />


        <FrameLayout
                android:id="@+id/list_layout"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">


            <LinearLayout
                    android:id="@+id/row_1"
                    android:layout_gravity="top"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/label_1"
                        android:layout_width="60dp"
                        android:layout_height="26dp"
                        android:text="@string/label_1"
                        android:background="@drawable/rounded_text_view_level_1"
                        android:gravity="center"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp" />

                <TextView
                        android:id="@+id/course_name_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:singleLine="true"
                        android:minWidth="100dp"
                        android:textSize="12sp"
                        android:text="@string/course_name_1"
                        android:textColor="?android:attr/textColorPrimary"
                        android:paddingStart="10dp" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/row_2"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:gravity="start|center"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/label_2"
                        android:layout_width="60dp"
                        android:layout_height="26dp"
                        android:background="@drawable/rounded_text_view_level_2"
                        android:gravity="center"
                        android:text="@string/label_2"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="12sp" />

                <TextView
                        android:id="@+id/course_name_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:singleLine="true"
                        android:minWidth="100dp"
                        android:textSize="12sp"
                        android:text="@string/course_name_2"
                        android:textColor="?android:attr/textColorPrimary"
                        android:paddingStart="10dp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/row_3"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:orientation="horizontal">


                <TextView
                        android:id="@+id/label_3"
                        android:layout_width="60dp"
                        android:layout_height="26dp"
                        android:background="@drawable/rounded_text_view_level_3"
                        android:gravity="center"
                        android:text="@string/label_3"
                        android:textColor="?attr/colorOnTertiary"
                        android:textSize="12sp" />

                <TextView
                        android:id="@+id/course_name_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:singleLine="true"
                        android:minWidth="100dp"
                        android:text="@string/course_name_3"
                        android:textSize="12sp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:paddingStart="10dp" />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>