<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/widget_container"
        android:padding="16dp"
        android:background="@drawable/widget_background"
        android:theme="@style/Theme.Material3.DynamicColors.DayNight"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/widget_title"
            android:textSize="14sp"
            android:textColor="?android:attr/textColorPrimary" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:id="@+id/widget_message"
            android:autoSizeMaxTextSize="29.5sp"
            android:textSize="29.5sp"
            android:gravity="start|center"
            android:layout_weight="1"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold" />

    <FrameLayout
            android:id="@+id/list_layout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">


        <LinearLayout
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/label_1"
                    android:text="@string/label_1"
                    android:layout_width="60dp"
                    android:layout_height="26dp"
                    android:background="@drawable/rounded_text_view_level_1"
                    android:gravity="center"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:textSize="12sp" />

            <TextView
                    android:id="@+id/course_name_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:text="小的"
                    android:singleLine="true"
                    android:minWidth="100dp"
                    android:textSize="12sp"
                    android:textColor="?android:textColorPrimary"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp" />
        </LinearLayout>

        <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:gravity="start|center"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/label_2"
                    android:text="@string/label_2"
                    android:layout_width="60dp"
                    android:layout_height="26dp"
                    android:background="@drawable/rounded_text_view_level_2"
                    android:gravity="center"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:textSize="12sp" />

            <TextView
                    android:id="@+id/course_name_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:singleLine="true"
                    android:minWidth="100dp"
                    android:textSize="12sp"
                    android:textColor="?android:textColorPrimary"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:orientation="horizontal">


            <TextView
                    android:id="@+id/label_3"
                    android:text="@string/label_3"
                    android:layout_width="60dp"
                    android:layout_height="26dp"
                    android:background="@drawable/rounded_text_view_level_3"
                    android:gravity="center"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="12sp" />

            <TextView
                    android:id="@+id/course_name_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:singleLine="true"
                    android:minWidth="100dp"
                    android:textSize="12sp"
                    android:textColor="?android:textColorPrimary"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
